# peer_practice

./: .gitignore  Cargo.toml  bacon.toml  flake.nix  install.fish  package-lock.json  package.json  readme.md
nix/: apps.nix  backend.nix  checks.nix  frontend.nix  module.nix  packages.nix  shell.nix  utils.nix
peer_practice/: Cargo.toml
peer_practice/src/: app_state.rs  lib.rs  main.rs
peer_practice/src/handler/: claims.rs  client_communication.rs  login.rs  mod.rs  websocket.rs
peer_practice/src/input/: config.rs  mod.rs
peer_practice/src/input/config/current/: email.rs  mod.rs  server.rs
peer_practice/src/input/config/v2025_11_17/: envelope.rs  mod.rs  server.rs
peer_practice/src/input/config/v2025_11_23/: email.rs  envelope.rs  mod.rs  server.rs
peer_practice/src/services/: mod.rs
peer_practice_messages/: Cargo.toml
peer_practice_messages/src/: lib.rs
peer_practice_messages/src/v2025_10_14/: accent_colors.rs  authentication.rs  email.rs  level.rs  messages.rs  mod.rs  post.rs  ymd.rs
peer_practice_messages/src/v2025_10_14/authentication/: login_data.rs  method.rs
peer_practice_messages/src/v2025_10_14/post/: topics.rs
peer_practice_messages/src/v2025_10_14/user/: display_user.rs  mod.rs  user_config.rs  user_id.rs
peer_practice_messages/src/v2026_01_11/: messages.rs  mod.rs
peer_practice_server_services/: Cargo.toml
peer_practice_server_services/src/: email.rs  lib.rs  pending_logins.rs  posts.rs  storage.rs  users.rs  ws_hub.rs
peer_practice_shared/: Cargo.toml
peer_practice_shared/src/: lib.rs
web-leptos/: Cargo.toml  index.html  tailwind.config.js  tailwind.css
web-leptos/assets/: tailwind.css
web-leptos/src/: app_state.rs  lib.rs  main.rs
web-leptos/src/components/: buttons.rs  mod.rs  modal.rs
web-leptos/src/event_card/: mod.rs  readonly.rs
web-leptos/src/event_card/editable/: draft.rs  mod.rs
web-leptos/src/home/: mod.rs
web-leptos/src/login/: email.rs  mod.rs  pin.rs
web-leptos/src/nav_menu/: mod.rs
web-leptos/src/settings/: mod.rs
web-leptos/src/websocket/: mod.rs
web-leptos/static/: button.css  card.css  color_palette.css  combo.css  dialog.css  headings.css  markdown.css  nav.css  toast.css
web-leptos/static/color_palette/: catppuccin_latte.css  catppuccin_macciato.css  catppuccin_mocha.css
