[workspace]
default-members = ["peer_practice"]
members = ["peer_practice", "peer_practice_messages", "peer_practice_server_services", "peer_practice_shared", "web-leptos"]
resolver = "3"
[workspace.package]
license = "MIT OR Apache-2.0"
version = "2025.11.25"

[workspace.dependencies]
peer_practice_shared = { path = "peer_practice_shared" }
peer_practice_messages = { path = "peer_practice_messages" }
peer_practice_server_services = { path = "peer_practice_server_services" }
eyre = "0.6.12"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.46.1", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.4", features = ["ws", "tracing", "tokio", "http2", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
rand = "0.9.2"
regex = "1.11.1"
tracing = "0.1.41"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
lettre = { version = "0.11", default-features = false, features = [
    "serde", "smtp-transport", "sendmail-transport", "builder", "tokio1-rustls", "ring", "rustls-platform-verifier"] }
reqwest = { version = "0.12.23", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
