[package]
name = "peer_practice_server_services"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
peer_practice_messages.workspace = true
lettre.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
uuid.workspace = true